# bd-project-25

./: 00_zone_mapping.py  01_data_ingestion.ipynb  01_data_ingestion.py  01_data_ingestion_report.ipynb  02_format_analysis.ipynb  02_measuring_size.ipynb  03_additional_dataset.ipynb  03_additional_dataset_pandas.py  03_additional_datasets_dask.py  03_data_enrichment_report.ipynb  04_data_cleaning.ipynb  05_eda_duckdb.ipynb  README.md  T1_data_ingestion_fhv.py  T1_data_ingestion_green_taxi.py  T1_data_ingestion_yellow_taxi.py  constants.py  download_tripdata.sh  download_yellow_tripdata.sh  download_zone_data.sh  external_sources.txt  lat_lng_to_id.py  paths.py  pyproject.toml  requirements.txt  run_t1.sh  run_t2.sh  run_t3.sh  run_t4.sh  run_t7.sh  sanity_checks.py  slurm_job.sh  submit_pipeline.slurm  temp.ipynb  utils.py
T1/: T1_data_ingestion_fhv.py  T1_data_ingestion_fhvhv.py  T1_data_ingestion_green_taxi.py  T1_data_ingestion_yellow_taxi.py
T2/: T2_data_cleaning_fhv.py  T2_data_cleaning_fhvhv.py  T2_data_cleaning_green_taxi.py  T2_data_cleaning_yellow_taxi.py  T2_generate_latex_out.py
T3/: T3_file_format_analysis.py
T4/: T4_eda_fhv.py  T4_eda_fhvhv.py  T4_eda_green_taxi.py  T4_eda_yellow_taxi.py  T4_postprocess.py
T5/: T5_dataaugment_fhv.py  T5_dataaugment_fhvhv.py  T5_dataaugment_green.py  T5_dataaugment_yellow.py
T6/: T6_join.py
T7/: T7_modeling_service_types.py
T8/: T8_visualization.py  visualization.ipynb
kafka/: docker-compose.yaml  report.ipynb
results/: fhv_tripdata_quality_stats.csv  fhvhv_tripdata_quality_stats.csv  file_format_analysis.csv  (+17 more)
(+24 files in other folders)
