[project]
name = "bd-project-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask-jobqueue>=0.9.0",
    "dask[complete]>=2025.3.0",
    "geopandas>=1.0.1",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
]
